--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5635,7 +5635,7 @@
                                 ({{ selectedFilterLabel }} - {{ episodeTypeFilterLabel }})
                             </span>
                             <br />
-                            <span :class="['text-base', (isAnyFilterActive || searchQuery) ? 'text-white' : 'text-red-600']">
+                            <span :class="['text-base', (isAnyFilterActive || searchQuery) ? 'text-white' : '']" :style="(isAnyFilterActive || searchQuery) ? '' : 'color: rgb(108 255 0);'">
                                 انقر على أي عنوان لعرض تفاصيله
                             </span>
                         </th>                                                                          
