--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5614,19 +5614,31 @@
                     <!-- Top full-width row -->
                     <tr>
                         <th colspan="2" :class="['border border-gray-300 h-8', (isAnyFilterActive || searchQuery) ? 'bg-orange-500' : '']">
-
-                            <br/>
                             <span
                                 v-if="isAnyFilterActive || searchQuery"
-                                @click="isAnyFilterActive ? openEmptyPopup() : toggleSearch()"
-                                class="inline-block text-base text-black cursor-pointer transition-all duration-100 active:scale-90"
+                                class="inline-block text-base text-black transition-all duration-100"
                             >
-                                {{ isAnyFilterActive && searchQuery
-                                    ? '(البحث والتصفية قيد التشغيل حالياً)'
-                                    : isAnyFilterActive
-                                        ? '(التصفية قيد التشغيل حالياً)'
-                                        : '(البحث قيد التشغيل حالياً)'
-                                }}
+                                <template v-if="isAnyFilterActive && searchQuery">
+                                    (
+                                    <span class="cursor-pointer active:scale-90 inline-block" @click="toggleSearch">
+                                        البحث
+                                    </span>
+                                    و
+                                    <span class="cursor-pointer active:scale-90 inline-block" @click="openEmptyPopup">
+                                        التصفية
+                                    </span>
+                                    قيد التشغيل حالياً)
+                                </template>
+                                <template v-else-if="isAnyFilterActive">
+                                    <span class="cursor-pointer active:scale-90 inline-block" @click="openEmptyPopup">
+                                        (التصفية قيد التشغيل حالياً)
+                                    </span>
+                                </template>
+                                <template v-else>
+                                    <span class="cursor-pointer active:scale-90 inline-block" @click="toggleSearch">
+                                        (البحث قيد التشغيل حالياً)
+                                    </span>
+                                </template>
                             </span>
                             <br v-if="isAnyFilterActive || searchQuery" />
                             <span :class="combinedFilterBadgeClasses">
