--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14002,20 +14002,15 @@
                 },
 
                     // Update page size and recalculate total pages
-                    handlePageSizeChange() {
-                        const startIndex = (this.currentPage - 1) * this.oldPageSize;
-                        this.currentPage = Math.floor(startIndex / this.pageSize) + 1;
-
-                        if (this.currentPage > this.totalPages) {
-                            this.currentPage = this.totalPages;
-                        }
-                        if (this.currentPage < 1) {
-                            this.currentPage = 1;
-                        }
-                        
-                        this.oldPageSize = this.pageSize;
-                        this.trackLastPage();
-                    },
+                handlePageSizeChange() {
+                    const firstItem = this.filteredItems[0];
+                    const newSize = this.pageSize;
+                    const newIndex = this.filteredItems.findIndex(x => x.id === firstItem.id);
+                    this.currentPage = Math.floor(newIndex / newSize) + 1;
+                    if (this.currentPage < 1) this.currentPage = 1;
+                    if (this.currentPage > this.totalPages) this.currentPage = this.totalPages;
+                    this.trackLastPage();
+                },
 
                 normalizeText(text) {
                     let normalizedText = text.toLowerCase();
