--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -16587,6 +16587,7 @@
                 },
 
                 openMangaModal(chapterNumber) {
+                    document.body.style.overflow = 'hidden'; // Block background scrolling
                     const chapterString = String(chapterNumber);
                     // Search through all available mangas
                     const allMangas = this.groupedMangas.flatMap(group => group.items);
