--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -6067,27 +6067,29 @@
                                                 v-if="video.EpisodeCategory || video.EpisodeTranslator || video.EpisodeRemastered"
                                                 class="font-bold text-base flex flex-col items-center gap-1"
                                             >
-                                                <span class="text-sm">
-                                                    <span v-if="video.EpisodeCategory">
-                                                        {{ video.EpisodeCategory === 'S' ? 'مترجم' : (video.EpisodeCategory === 'D' ? 'مدبلج' : video.EpisodeCategory) }}
+                                                <legend class="flex flex-col items-center gap-1">
+                                                    <span class="text-sm">
+                                                        <span v-if="video.EpisodeCategory">
+                                                            {{ video.EpisodeCategory === 'S' ? 'مترجم' : (video.EpisodeCategory === 'D' ? 'مدبلج' : video.EpisodeCategory) }}
+                                                        </span>
+                                                        <span v-if="video.EpisodeTranslator">
+                                                            <span v-if="video.EpisodeCategory"> - </span>{{ video.EpisodeTranslator }}
+                                                        </span>
+                                                        <span v-if="video.EpisodeRemastered">
+                                                            <span v-if="video.EpisodeCategory || video.EpisodeTranslator"> - </span>
+                                                            {{ video.EpisodeRemastered === 'T' ? 'محسنة' : (video.EpisodeRemastered === 'F' ? 'غير محسنة' : video.EpisodeRemastered) }}
+                                                        </span>
                                                     </span>
-                                                    <span v-if="video.EpisodeTranslator">
-                                                        <span v-if="video.EpisodeCategory"> - </span>{{ video.EpisodeTranslator }}
-                                                    </span>
-                                                    <span v-if="video.EpisodeRemastered">
-                                                        <span v-if="video.EpisodeCategory || video.EpisodeTranslator"> - </span>
-                                                        {{ video.EpisodeRemastered === 'T' ? 'محسنة' : (video.EpisodeRemastered === 'F' ? 'غير محسنة' : video.EpisodeRemastered) }}
-                                                    </span>
-                                                </span>
 
-                                                <button
-                                                    :disabled="video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending'"
-                                                    @click="() => { sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index, video.IntroductionTime, video.StartStoryTime, video.EpisodeSuspenseTime, video.StartSongTime, video.ChapterOneTime, video.ChapterTwoTime, video.EndSongTime, video.ChapterThreeTime, video.NextEpisodeTeaserTime, video.NextEpisodeHintTime); }"
-                                                    class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-700 flex items-center justify-center shadow-md disabled:opacity-50 transition-all duration-100 active:scale-90 disabled:cursor-not-allowed">
-                                                    <span v-if="video.status === 'ratelimiting'">{{ video.Resolution }} ({{ formatFileSize(video.Size) }})</span>
-                                                    <span v-else-if="video.countdown !== undefined">{{ video.countdown }}</span>
-                                                    <span v-else>{{ video.Resolution }} ({{ formatFileSize(video.Size) }})</span>
-                                                </button>
+                                                    <button
+                                                        :disabled="video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending'"
+                                                        @click="() => { sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index, video.IntroductionTime, video.StartStoryTime, video.EpisodeSuspenseTime, video.StartSongTime, video.ChapterOneTime, video.ChapterTwoTime, video.EndSongTime, video.ChapterThreeTime, video.NextEpisodeTeaserTime, video.NextEpisodeHintTime); }"
+                                                        class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-700 flex items-center justify-center shadow-md disabled:opacity-50 transition-all duration-100 active:scale-90 disabled:cursor-not-allowed">
+                                                        <span v-if="video.status === 'ratelimiting'">{{ video.Resolution }} ({{ formatFileSize(video.Size) }})</span>
+                                                        <span v-else-if="video.countdown !== undefined">{{ video.countdown }}</span>
+                                                        <span v-else>{{ video.Resolution }} ({{ formatFileSize(video.Size) }})</span>
+                                                    </button>
+                                                </legend>
                                             </legend>
 
                                             <button
