--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -6242,6 +6242,14 @@
                                                     class="inline-block h-6 w-6">
                                             </div>
                                         </template>
+										<template v-else-if="char === 'ن'">
+                                            <div class="inline-block h-6 w-6 mr-1 transition-all duration-100 active:scale-90"
+                                                v-tippy="'مكتب الاستخبارات والتحقيقات التابع لمجلس الوزراء (CIRO)'">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/Plot-CIRO.png" 
+                                                    alt="مكتب الاستخبارات والتحقيقات التابع لمجلس الوزراء (CIRO)" 
+                                                    class="inline-block h-6 w-6">
+                                            </div>
+                                        </template>
                                         <template v-else>
                                             {{ char }}
                                         </template>
@@ -18085,5 +18093,6 @@
     </style>
 </body>
 </html>
+
 
 
