--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -6525,7 +6525,7 @@
                     "ش": ["س","ش"],
                     },
                     jsonUrl: "https://enc.mdccxxixix.workers.dev",
-                    episodeNotesDebug: true,  // Enable for debugging episode notes processing
+                    episodeNotesDebug: false,  // Enable for debugging episode notes processing
                     episodeLinkClickHandler: null,
                     episodeTypeFilter: 'All',
                     episodes: [],
