--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -6512,10 +6512,11 @@
                     lastClickedEpisode: null,
                     errorMessage: "",
                     statusClearTimeout: 2000,
-                    ep: 1185,
+                    ep: 1184,
                     mangaCh: 1155,
                     replacementDict: {
-                    "فلم": ["فيلم",],
+                    "فلم": ["فيلم","فلم"],
+                    "فيلم": ["فلم","فيلم"],
                     "ة": ["ه","ة"],
                     "ه": ["ة","ه"],
                     "أ": ["ا","إ","أ"],
@@ -6523,6 +6524,8 @@
                     "إ": ["أ","ا","إ"],
                     "س": ["ش","س"],
                     "ش": ["س","ش"],
+                    "لوبن": ["لوبين","لوبن"],
+                    "لوبين": ["لوبن","لوبين"],
                     },
                     jsonUrl: "https://enc.mdccxxixix.workers.dev",
                     episodeNotesDebug: false,  // Enable for debugging episode notes processing
@@ -18290,4 +18293,3 @@
     </style>
 </body>
 </html>
-
